@@ -1,0 +1,1 @@
+../../gensim/models/word2vec_inner.pyx
